--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,20 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+
+body {
+  overflow-x: hidden;
+  font-family: var(--main-font);
+  font-size: 1.2rem;
+  background-color: var(--third-color);
+  color: white;
+}
+
+/* Scrollbar */
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -31,43 +45,12 @@
   background: var(--highlight-color);
   border-style: solid;
   border-width: 4px 0px;
-  /* 5px top and bottom, 20px on the sides */
   border-color: var(--second-color);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--second-color);
-}
-
-html {
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
-}
-
-body {
-  overflow-x: hidden;
-
-  font-family: var(--main-font);
-  font-size: 1.2rem;
-
-  background-color: var(--third-color);
-  color: white;
-}
-
-a {
-  text-decoration: none;
-  color: currentColor;
-}
-
-h1,
-h2,
-p {
-  margin-bottom: 10px;
-}
-
-h1 {
-  font-size: 3rem;
 }
 
 /* Loader */
@@ -78,11 +61,9 @@ h1 {
   width: 100vw;
   height: 100vh;
   z-index: 99;
-
   display: flex;
   justify-content: center;
   align-items: center;
-
   background: var(--main-color);
 }
 
@@ -90,12 +71,10 @@ h1 {
 .loader__spinner {
   width: 120px;
   height: 120px;
-
   border: 10px solid transparent;
   border-radius: 50%;
   border-top-color: var(--second-color);
   border-bottom-color: var(--second-color);
-
   filter: drop-shadow(0 0 5px var(--second-color));
   animation: spin 0.7s linear infinite;
 }
@@ -116,11 +95,34 @@ h1 {
   }
 }
 
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+h1,
+h2,
+p {
+  margin-bottom: 10px;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+img,
+video {
+  width: 100%;
+  display: block;
+}
+
+/* svg */
 svg {
   fill: #fff;
   display: block;
 }
 
+/* Social icons */
 .social-icons {
 }
 
@@ -155,26 +157,33 @@ svg {
   padding-left: 15px;
 }
 
+.hamburger {
+  display: none;
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+}
+
+/* Header */
 header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 98;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-
   color: white;
-
   background: var(--main-color);
   box-shadow: 0 5px 10px black;
 }
 
 .logo {
   width: 20%;
-
   font-size: 2rem;
   text-align: center;
 }
@@ -184,6 +193,7 @@ header {
 }
 
 nav {
+  display: block;
   width: 60%;
 }
 
@@ -214,9 +224,7 @@ section {
   position: relative;
   min-height: 100vh;
   width: 100%;
-
   z-index: 1;
-
   scroll-snap-align: start;
 }
 
@@ -243,10 +251,13 @@ aside {
   box-shadow: 0 5px 10px black;
 }
 
-img,
-video {
-  width: 100%;
-  display: block;
+.tools {
+  display: flex;
+}
+
+.toolIcon {
+  width: 200px;
+  height: 200px;
 }
 
 .creator {
@@ -263,7 +274,6 @@ video {
   z-index: -1;
   width: 100%;
   height: 100%;
-
   background-color: rgba(75, 0, 130, 0.2);
 }
 
@@ -272,27 +282,10 @@ video {
   width: 35%;
 }
 
-.tools {
-  display: flex;
-}
-
-.toolIcon {
-  width: 200px;
-  height: 200px;
-}
-
 footer {
   display: flex;
   min-height: 10vh;
   scroll-snap-align: end;
-}
-
-.hamburger {
-  display: none;
-  position: absolute;
-  right: 25px;
-  top: 25px;
-  font-size: 2rem;
 }
 
 @media only screen and (max-width: 700px) {
@@ -316,6 +309,7 @@ footer {
   nav ul {
     flex-direction: column;
   }
+
   nav {
     display: none;
   }
