--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,3 @@
-:root {
-  --main-color: #4b0082;
-  --second-color: #327ea7;
-  --third-color: #384955;
-  --highlight-color: #88b0cd;
-  --main-font: "Ubuntu", sans-serif;
-  --second-font: "Oxygen", sans-serif;
-}
-
-/* Reset */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
-}
-
-body {
-  overflow-x: hidden;
-  font-family: var(--main-font);
-  font-size: 1.2rem;
-  background-color: var(--third-color);
-  color: white;
-}
-
 /* Scrollbar */
 /* width */
 ::-webkit-scrollbar {
@@ -58,12 +27,12 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
   z-index: 99;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
   background: var(--main-color);
 }
 
@@ -94,20 +63,204 @@ body {
     border-width: 10px;
   }
 }
-
-a {
+/* Header */
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 98;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  padding: 15px;
+  text-align: center;
+  background: var(--main-color);
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0 5px 10px black;
+}
+nav a {
   text-decoration: none;
   color: currentColor;
+}
+nav .navbar__toggle {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+  color: currentColor;
+}
+nav .navbar__toggle span {
+  display: block;
+  width: 25px;
+  height: 10px;
+  border-top: 3px solid currentColor;
+}
+nav .navbar__links {
+  display: none;
+  margin-top: 25px;
+}
+nav ul {
+  list-style: none;
+}
+nav .active {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.creator, .main, .intro {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.container {
+  width: 85%;
+  max-width: 1024px;
+}
+
+.intro {
+  min-height: 100vh;
+  width: 100%;
+  padding: 0 25px;
+  background-color: var(--second-color);
+  box-shadow: 0 5px 10px black;
+}
+
+.main {
+  min-height: 100vh;
+  width: 100%;
+  background-color: var(--third-color);
+  box-shadow: 0 5px 10px black;
+}
+
+section {
+  position: relative;
+  padding: 25px 0;
+}
+
+.creator {
+  min-height: 100vh;
+  color: white;
+  box-shadow: 0 5px 10px black;
+  z-index: 1;
+}
+.creator::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: url("../img/creator-bg.jpg") center/cover;
+}
+.creator::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.4);
+}
+.creator img {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.tools {
+  display: flex;
+  align-items: center;
+}
+.tools img {
+  width: 50px;
+  height: 50px;
+}
+
+/* svg */
+svg {
+  fill: currentColor;
+  display: block;
+}
+
+/* Social icons */
+.social-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-icons__list {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.social-icons__list-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  color: currentColor;
+}
+
+.creator .social-icons__list-item {
+  background: var(--main-color);
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.05);
+}
+
+.social-icon {
+  display: block;
+  height: auto;
+  width: 32px;
+  transition: all 0.5s;
+}
+
+.social-icon-text {
+  display: inline-block;
+  padding-left: 15px;
+}
+
+:root {
+  --main-color: #4b0082;
+  --second-color: #327ea7;
+  --third-color: #384955;
+  --highlight-color: #88b0cd;
+  --main-font: "Ubuntu", sans-serif;
+  --second-font: "Oxygen", sans-serif;
+}
+
+/* Reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 h1,
 h2,
 p {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
-h1 {
-  font-size: 3rem;
+html {
+  scroll-behavior: smooth;
+  /* scroll-snap-type: y mandatory; */
+}
+
+body {
+  font-family: var(--main-font);
+  background-color: var(--highlight-color);
+  color: white;
 }
 
 img,
@@ -120,205 +273,20 @@ video {
 svg {
   fill: #fff;
   display: block;
-}
-
-/* Social icons */
-.social-icons {
-}
-
-.social-icons__list {
-  display: flex;
-  gap: 25px;
-}
-
-.social-icons__list-item {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  color: currentColor;
-}
-
-.creator .social-icons__list-item {
-  background: var(--main-color);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
-    0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
-    0 16px 16px rgba(0, 0, 0, 0.05);
-}
-
-.social-icon {
-  display: block;
-  height: auto;
-  width: 30px;
-  transition: all 0.5s;
-}
-
-.social-icon-text {
-  display: inline-block;
-  padding-left: 15px;
-}
-
-.hamburger {
-  display: none;
-  position: absolute;
-  right: 25px;
-  top: 25px;
-  font-size: 2rem;
-  color: white;
-  cursor: pointer;
-}
-
-/* Header */
-header {
-  position: fixed;
-  top: 0;
   width: 100%;
-  z-index: 98;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px;
-  color: white;
-  background: var(--main-color);
-  box-shadow: 0 5px 10px black;
-}
-
-.logo {
-  width: 20%;
-  font-size: 2rem;
-  text-align: center;
-}
-
-.logo div {
-  font-size: 0.9rem;
-}
-
-nav {
-  display: block;
-  width: 60%;
-}
-
-nav ul {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-nav li {
-  list-style: none;
-}
-
-header a {
-  display: inline-block;
-  width: 100%;
-  padding: 10px;
-  text-align: center;
-  text-transform: uppercase;
 }
 
 .playBtn {
+  display: inline-block;
   background-color: var(--highlight-color);
   border-radius: 10px;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  color: var(--main-color);
+  font-weight: 600;
+  text-decoration: none;
 }
 
 section {
-  display: flex;
-  position: relative;
-  min-height: 100vh;
   width: 100%;
-  z-index: 1;
-  scroll-snap-align: start;
-}
-
-.container {
-  position: relative;
-  width: 80%;
-  min-height: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-article {
-  width: 50%;
-}
-
-aside {
-  width: 45%;
-}
-
-.intro {
-  background-color: var(--second-color);
-  box-shadow: 0 5px 10px black;
-}
-
-.tools {
-  display: flex;
-}
-
-.toolIcon {
-  width: 200px;
-  height: 200px;
-}
-
-.creator {
-  background: url("../img/creator-bg.jpg") fixed center / cover;
-  color: white;
-  box-shadow: 0 5px 10px black;
-}
-
-.creator::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(75, 0, 130, 0.2);
-}
-
-.avatar {
-  border-radius: 50%;
-  width: 35%;
-}
-
-footer {
-  display: flex;
-  min-height: 10vh;
-  scroll-snap-align: end;
-}
-
-@media only screen and (max-width: 700px) {
-  html {
-    scroll-snap-type: y proximity;
-  }
-  body {
-    font-size: 1rem;
-  }
-  .container {
-    padding: 100px 0;
-    flex-direction: column;
-  }
-
-  article,
-  aside {
-    width: 100%;
-  }
-
-  header,
-  nav ul {
-    flex-direction: column;
-  }
-
-  nav {
-    display: none;
-  }
-
-  .logo {
-    width: 100%;
-  }
-
-  .hamburger {
-    display: block;
-  }
 }
