--- a/game/css/style.css
+++ b/game/css/style.css
@@ -96,7 +96,7 @@ a {
   position: absolute;
   top: 10%;
   left: 50%;
-  transform: translate(-50%, -10%) rotateX(-5deg) translateZ(10px);
+  transform: translate(-50%, -10%);
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -107,6 +107,9 @@ a {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
     0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
     0 16px 16px rgba(0, 0, 0, 0.05);
+
+  transition: all 0.5s;
+  animation: topIn 1s;
 }
 
 .info > div {
@@ -129,6 +132,8 @@ a {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
     0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
     0 16px 16px rgba(0, 0, 0, 0.05);
+
+  transition: all 0.5s;
 }
 
 .backBtn {
@@ -221,6 +226,50 @@ a {
 
 .shake {
   animation: shake 0.5s;
+}
+
+.finResult {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateX(0deg) translateZ(0px);
+  font-size: 1.5rem;
+}
+
+.finPanel {
+  top: 70%;
+  width: auto;
+}
+
+.topIn {
+  animation: topIn 0.5s;
+}
+
+.bottomIn {
+  animation: bottomIn 0.5s;
+}
+
+.leftIn {
+  animation: leftIn 0.5s;
+}
+
+@keyframes leftIn {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0%;
+  }
+}
+
+@keyframes bottomIn {
+  from {
+    top: 150%;
+  }
+}
+@keyframes topIn {
+  from {
+    top: -50%;
+  }
 }
 
 /* Shake animation */
