--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -16,7 +16,17 @@ nav {
 
   background: var(--main-color);
   border-radius: 0 0 10px 10px;
-  box-shadow: 0 5px 10px black;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+
+  .logo {
+    div {
+      font-size: 1.5rem;
+    }
+    small {
+      font-size: 0.6rem;
+    }
+  }
 
   a {
     text-decoration: none;
@@ -43,16 +53,18 @@ nav {
 
   .navbar__links {
     display: none;
-    margin-top: 25px;
+    margin-top: 3rem;
   }
 
-  ul {
+  ul,
+  ul li {
     list-style: none;
+    padding: 0;
   }
 
   .active {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 2rem;
   }
 }
